--- a/notebooks/introduction-python/lists.ipynb
+++ b/notebooks/introduction-python/lists.ipynb
@@ -7,7 +7,32 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/javlintor/curso-python-us/blob/main/notebooks/introduction-python/lists.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/anatrutra/curso-python-us/blob/main/notebooks/introduction-python/lists.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Aqyu voy a hablar de este tema porque si"
+      ],
+      "metadata": {
+        "id": "BoIfl4ZRaWYC",
+        "outputId": "e101f096-c349-46ee-b2ea-84ddb9a6919b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-6b1808a3cb87>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Aqyu voy a hablar de este tema porque si\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
       ]
     },
     {
@@ -18,10 +43,19 @@
       "source": [
         "# Listas\n",
         "\n",
-        "Las **listas** son un tipo de objeto que nos permite guardar una secuencia de otros objetos, actualizarlos, añadir nuevos y borrarlos. A diferencia de todos los tipos que hemos visto hasta ahora, las listas con objetos **mutables**, es decir, pueden cambiar durante la ejecución de nuestro programa. \n",
+        "Las **listas** son un tipo de objeto que nos permite guardar una secuencia de otros objetos, actualizarlos, añadir nuevos y borrarlos. A diferencia de todos los tipos que hemos visto hasta ahora, las listas con objetos **mutables**, es decir, pueden cambiar durante la ejecución de nuestro programa.\n",
         "\n",
         "Para crear una lista en Python usamos corchetes y escribimos sus elementos separados por comas `[item1, item2, ..., itemN]`. Los objetos de una lista **no tienen por qué ser del mismo tipo de objeto**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "p0hRxSPyaU5D"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -108,7 +142,7 @@
         "id": "RNbpSdysRvDl"
       },
       "source": [
-        "Puedes incluir variables y expresiones en la definición de la lista. Python evaluará dichas expresiones y luego construirá la lista. "
+        "Puedes incluir variables y expresiones en la definición de la lista. Python evaluará dichas expresiones y luego construirá la lista."
       ]
     },
     {
@@ -144,7 +178,7 @@
         "id": "IX91AgsCUnMT"
       },
       "source": [
-        "El tipo `list` puede ser utilizado para convertir otros tipos de objetos a listas, en concreto aquellos que sean **iterables**, cosa que definiremos más adelante. "
+        "El tipo `list` puede ser utilizado para convertir otros tipos de objetos a listas, en concreto aquellos que sean **iterables**, cosa que definiremos más adelante."
       ]
     },
     {
@@ -362,7 +396,7 @@
         "---\n",
         "## Las listas son secuencias\n",
         "\n",
-        "Al igual que las cadenas, las listas **son secuencias**, por lo que el orden de sus objetos es importante y podemos acceder a los mismo mediante un índice entero que empieza en cero. "
+        "Al igual que las cadenas, las listas **son secuencias**, por lo que el orden de sus objetos es importante y podemos acceder a los mismo mediante un índice entero que empieza en cero."
       ]
     },
     {
@@ -398,7 +432,7 @@
         "id": "a76IipNqWhiX"
       },
       "source": [
-        "Podemos utilizar la misma sintaxis de indexado que vimos con las cadenas utilizando corchetes y `:`. \n",
+        "Podemos utilizar la misma sintaxis de indexado que vimos con las cadenas utilizando corchetes y `:`.\n",
         "\n",
         "En las secuencias, el método que nos da la longitud del objeto es `len`"
       ]
@@ -637,9 +671,9 @@
         "id": "oHmGveVgaRri"
       },
       "source": [
-        "Otros métodos que pueden ser útiles con listas son \n",
+        "Otros métodos que pueden ser útiles con listas son\n",
         "- `pop(n)`: devuelve el elemento `n`-ésimo y lo borra de la lista. Devuelve un `IndexError` si `n` está fuera del índice.\n",
-        "- `remove(a)`: borra el primer elemento cuyo valor coincida con `a`. Devuelve un `ValueError` si no encuentra el valor. \n",
+        "- `remove(a)`: borra el primer elemento cuyo valor coincida con `a`. Devuelve un `ValueError` si no encuentra el valor.\n",
         "- `insert(n, a)`: inserta el objeto `a` en la posición `n`-ésima de la lista"
       ]
     },
@@ -794,7 +828,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Podemos concatenar listas usando el operador `+`. En caso de tener listas anidadas, es posible aplicar directamente más de una operación de indexado. "
+        "Podemos concatenar listas usando el operador `+`. En caso de tener listas anidadas, es posible aplicar directamente más de una operación de indexado."
       ],
       "metadata": {
         "id": "2O5VVVwT504i"
@@ -845,7 +879,7 @@
         "```\n",
         "l = [[1, \"foo\"], [\"bar\", None], True, 3.5]\n",
         "```\n",
-        "para obtener \n",
+        "para obtener\n",
         "\n",
         "```\n",
         "[[1, \"baz\"], [\"bar\", None], True, -1.5, [0, 1, 0]]\n",
@@ -860,14 +894,14 @@
         ":::{exercise}\n",
         ":label: lists-comparison\n",
         "\n",
-        "Condiera una lista `s` y definamos \n",
+        "Condiera una lista `s` y definamos\n",
         "\n",
         "```\n",
         "r = list(s)\n",
         "t = s\n",
         "```\n",
         "\n",
-        "Indica si las siguientes expresiones son verdaderas o falsas \n",
+        "Indica si las siguientes expresiones son verdaderas o falsas\n",
         "- `r == s`\n",
         "- `r is s`\n",
         "- `s is t`\n",
@@ -881,7 +915,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para el siguiente ejercicio, puedes utilizar el módulo `time` o el [**comando mágico**](https://ipython.readthedocs.io/en/stable/interactive/magics.html) de jupyter `%%time` para obtener el tiempo de ejecución de una celdilla. "
+        "Para el siguiente ejercicio, puedes utilizar el módulo `time` o el [**comando mágico**](https://ipython.readthedocs.io/en/stable/interactive/magics.html) de jupyter `%%time` para obtener el tiempo de ejecución de una celdilla."
       ],
       "metadata": {
         "id": "g6oJoG2vRYeG"
@@ -957,7 +991,7 @@
         ":::{exercise}\n",
         ":label: lists-membership\n",
         "\n",
-        "Usando la estructura `list(range(n))`, crea listas de diferentes tamaños y estima la complejidad computacional en cuanto a tiempo de cómputo de comprobar la pertenencia a una lista. \n",
+        "Usando la estructura `list(range(n))`, crea listas de diferentes tamaños y estima la complejidad computacional en cuanto a tiempo de cómputo de comprobar la pertenencia a una lista.\n",
         "\n",
         ":::"
       ],
@@ -969,7 +1003,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx96k6EABw5szvuaOUIKqM",
       "include_colab_link": true
     },
     "kernelspec": {
